--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,10 +68,11 @@
               </article>
               <article class="text col_6" data-aos="fade-left" data-aos-offset="300">
                 <div class="tence">
-                <p>안녕하세요 꼼꼼하고 끈기있는 웹 퍼블리셔 김인성입니다.<br>
-                  HTML로 효율적인 코드를 설계하고 CSS 와 JAVASCRIPT를 활용해 구현이 이루어질때마다 뿌듯하고 기쁩니다.<br>
-                  꼼꼼하고 끈기가 있어서 종종 오류가 나거나 마음처럼 코드가 그려지지 않더라도 당황하지않고 침착하게 해결해 나갑니다.<br>
-                  빠른 습득력과 뛰어난 응용력을 바탕으로 매일매일 발전하는 웹 퍼블리셔가 될 것입니다.
+                <p>
+                  <span>안녕하세요. 꼼꼼하고 끈기있는 웹 퍼블리셔 김인성입니다.</span><br>
+                  HTML로 효율적인 코드를 설계하고 CSS 와 JAVASCRIPT를 활용해 구현이 이루어질때마다 뿌듯함과 기쁨을 느끼며
+                  종종 오류가 나거나 뜻대로 코드가 그려지지 않더라도 당황하지않고 침착하게 해결해 나갑니다.<br>
+                  항상 같은 자리에 머물지 않고 빠른 습득력과 뛰어난 응용력을 바탕으로 매일매일 발전하는 웹 퍼블리셔가 되겠습니다 :) 감사합니다.
                 </p>
               </div>
                   <h2>Skill</h2>
@@ -87,7 +88,7 @@
                         <img src="./images/xd.png" alt="xd">
                       </li>
                       <li>
-                        <img src="./images/github.png" alt="github">
+                        <img class="git" src="./images/github.jpg" alt="github">
                       </li>
                     </ul>
                       </div>
@@ -110,7 +111,6 @@
                </div>
             </div>
        </section>
-    
         <section id="works">
             <div class="container">
               <h2>Works</h2>
